--- a/index.html
+++ b/index.html
@@ -65,25 +65,25 @@
                 <div class="carousel-item active">
                     <div class="col">
                         <h2>Creative Templete</h2>
-                        <h1>WELCOME<br>To MOGO</h1>
+                        <h1 class="d-none d-md-block">WELCOME<br>To MOGO</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="col">
                         <h2>Hard Work</h2>
-                        <h1>WELCOME<br>To MOGO</h1>
+                        <h1 class="d-none d-md-block">WELCOME<br>To MOGO</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="col">
                         <h2>Productivity</h2>
-                        <h1>WELCOME<br>To MOGO</h1>
+                        <h1 class="d-none d-md-block">WELCOME<br>To MOGO</h1>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <div class="col">
                         <h2>High Quality</h2>
-                        <h1>WELCOME<br>To MOGO</h1>
+                        <h1 class="d-none d-md-block">WELCOME<br>To MOGO</h1>
                     </div>
                 </div>
             </div>
@@ -97,54 +97,71 @@
                 <a class="header-btn">LEARN MORE</a>
             </div>
     </header>
-    <section class="aboutUs">
-        <div class="container" style="padding-top: 100px;">
-            <div class="col text-center">
+    <section id="AboutUs" data-nav="section2" class="aboutUs  pb-md-5 pt-5 ">
+        <div class="container pb-md-5 text-center pt-5">
+            <div class="container md-5  text-center ">
                 <div class="content">
                     <div class="col">
-                        <h5>What we do</h5>
-                        <h2>STORY ABOUT US</h2>
+                        <h5>Service</h5>
+                        <h2>WHAT WE DO</h2>
                     </div>
                 </div>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus veritatis officiis commodi
                     possimus reprehenderit! Facilis ab error, soluta nemo nulla veritatis similique illum vitae esse
                     assumenda quia delectus, harum praesentium?</p>
             </div>
-        </div>
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-12 col-md-6 col-lg-4 ">
-                    <img src="img/Layer 44.png" class="img-fluid">
+            <div class="row py-md-5 pt-5">
+                <div class="col-md-4 mb-1">
+                    <div class="imgContent position-relative">
+                        <img src="img/Layer 44.png" class="w-100" alt="">
+                        <div class=" caption">
+                            <i class="fa fa-users mb-1   "></i>
+                            <h5 class="text-light font-weight-bold">SUPER TEAM</h5>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4 ">
-                    <img src="img/Layer 39.png" class="img-fluid" style="width: 380px; height: 234px;">
+                <div class="col-md-4 mb-1">
+                    <div class="imgContent position-relative">
+                        <img src="img/Layer 39.png" class="w-100" alt="" style=" height: 234px;">
+                        <div class=" caption">
+                            <i class="fa fa-users mb-1   "></i>
+                            <h5 class="text-light font-weight-bold">SUPER TEAM</h5>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4">
-                    <img src="img/Layer 41.png " class="img-fluid">
+                <div class="col-md-4 mb-1 ">
+                    <div class="imgContent position-relative ">
+                        <img src="img/Layer 41.png" class="w-100" alt="">
+                        <div class=" caption">
+                            <i class="fa fa-users mb-1   "></i>
+                            <h5 class="text-light font-weight-bold">SUPER TEAM</h5>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-    <section class="facts">
+
+    <section class="facts mt-5 mt-md-0">
         <div class="container">
-            <div class="row justify-content-around text-center">
-                <div>
+            <div class="row justify-content-around text-center flex-nowrap">
+                <div class="col">
                     <h2>42</h2>
                     <h6>WEB DESIGN PRODUCTS</h6>
                 </div>
-                <div>
+                <div class="col">
                     <h2>123</h2>
                     <h6>HAPPY CLIENTS</h6>
                 </div>
-                <div>
+                <div class="col">
                     <h2>15</h2>
                     <h6>AWARD WINNER</h6>
                 </div>
-                <div>
+                <div class="col">
                     <h2>99</h2>
                     <h6>CUPS OF COFFEE</h6>
                 </div>
-                <div>
+                <div class="col">
                     <h2>24</h2>
                     <h6>MEMBERS</h6>
                 </div>
@@ -255,7 +272,7 @@
                         <h2>UNIQUE DESIGN</h2>
                     </div>
                 </div>
-                <img src="img/White.png">
+                <img src="img/White.png" class="d-none d-md-inline-flex">
             </div>
         </div>
     </section>
@@ -273,7 +290,7 @@
         </div>
         <div class="container">
             <div class="row   mb-5 text-left">
-                <div class="col-lg-6 d-none d-lg-block">
+                <div class="col-lg-6 d-lg-block">
                     <figure>
                         <img src="img/Layer43.png" alt="" class="img-fluid" width="93.5%">
                     </figure>
