--- a/index.html
+++ b/index.html
@@ -652,6 +652,283 @@
                 </div>
             </div>
         </section>
+    </section>
+    <section id="Clients" data-nav="section9" class="clients pb-md-5 pt-5"
+        style="background-image: url(img/nature1.jpg);">
+        <div class="container  pb-md-3 pt-5 text-center content">
+            <h5 class="mb-3 subtitle">Happy Clients</h5>
+            <h2 class=" maintitle">WHAT PEOPLE SAY</h2>
+        </div>
+        <div class="container  py-md-4">
+            <div class="row py-5">
+                <div class="col-md-6 pr-lg-5 mb-5">
+                    <div
+                        class="media flex-column flex-md-row justify-content-center align-items-center text-center text-md-left">
+                        <img class="align-self-md-start  mr-3 rounded-circle" src="img/client1.jpg"
+                            alt="Generic placeholder image">
+                        <div class="media-body">
+                            <h5 class="mt-0 name ">MIKE PETRUCCI</h5>
+                            <h6 class="job mb-4">Graphic Design</h6>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                incididunt
+                                ut labore et dolore magna aliqua. Ut enim ad minim.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 pl-lg-5 mb-5">
+                    <div
+                        class="media flex-column flex-md-row justify-content-center align-items-center text-center text-md-left">
+                        <img class="align-self-md-start  mr-3 rounded-circle" src="img/client5.png"
+                            alt="Generic placeholder image">
+                        <div class="media-body">
+                            <h5 class="mt-0 name ">MATTHEW DIX</h5>
+                            <h6 class="job mb-4">Graphic Design</h6>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                incididunt
+                                ut labore et dolore magna aliqua. Ut enim ad minim.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 pr-lg-5 mb-5">
+                    <div
+                        class="media flex-column flex-md-row justify-content-center align-items-center text-center text-md-left">
+                        <img class="align-self-md-start  mr-3 rounded-circle" src="img/client2.jpg"
+                            alt="Generic placeholder image">
+                        <div class="media-body">
+                            <h5 class="mt-0 name ">MIKE PETRUCCI</h5>
+                            <h6 class="job mb-4">Graphic Design</h6>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                incididunt
+                                ut labore et dolore magna aliqua. Ut enim ad minim.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 pl-lg-5 mb-5">
+                    <div
+                        class="media flex-column flex-md-row justify-content-center align-items-center text-center text-md-left">
+                        <img class="align-self-md-start  mr-3 rounded-circle" src="img/client3.jpg"
+                            alt="Generic placeholder image">
+                        <div class="media-body">
+                            <h5 class="mt-0 name ">MATTHEW DIX</h5>
+                            <h6 class="job mb-4">Graphic Design</h6>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                incididunt
+                                ut labore et dolore magna aliqua. Ut enim ad minim.</p>
+                        </div>
+                    </div>
+                    </div1>
+                </div>
+            </div>
+    </section>
+    <div class="blog-content">
+        <div class="container  pb-lg-5  pt-5 text-center">
+            <div class="container" style="padding-top: 100px;">
+                <div class="col text-center">
+                    <div class="content">
+                        <div class="col">
+                            <h5>What we do</h5>
+                            <h2>SOME OF OUR WORK</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <section class="latest-blog" id="blog">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-4 my-3">
+                    <div class="pos-img-cont ">
+                        <img src="img/latest-blog1.png" class="img-fluid w-100 mb-3" />
+                        <div class="pos-blog d-flex flex-column">
+                            <h3 class="m-0 p-0 text-light">15</h3>
+                            <p class="p-0 m-0 text-light">Jan</p>
+                        </div>
+                    </div>
+                    <div class="blog-item">
+
+                        <h5>Lorem ipsum dolor sit amet</h5>
+                        <p class="text-muted">Consectetur adipiscing elit, sed do eiusmod tempor
+                            incididunt ut labore et dolore magna aliqua.
+                        </p>
+                        <hr class="mt-1">
+                        </hr>
+                        <div class="d-flex">
+                            <i class="fa fa-eye px-1"></i>
+                            <p class="text-muted ">542</p>
+                            <i class="fa fa-comment-dots px-2"></i>
+                            <p class="text-muted">17</p>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 my-3">
+                    <div class="pos-img-cont">
+                        <img src="img/latest-blog2.png" class="img-fluid w-100 mb-3" />
+                        <div class="pos-blog d-flex flex-column">
+                            <h3 class="m-0 p-0 text-light">15</h3>
+                            <p class="p-0 m-0 text-light">Jan</p>
+                        </div>
+                    </div>
+                    <div class="blog-item">
+
+                        <h5>Lorem ipsum dolor sit amet</h5>
+                        <p class="text-muted">Consectetur adipiscing elit, sed do eiusmod tempor
+                            incididunt ut labore et dolore magna aliqua.
+                        </p>
+                        <hr class="mt-1">
+                        </hr>
+                        <div class="d-flex">
+                            <i class="fa fa-eye px-1"></i>
+                            <p class="text-muted ">542</p>
+                            <i class="fa fa-comment-dots px-2"></i>
+                            <p class="text-muted">17</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 my-3">
+                    <div class="pos-img-cont">
+                        <img src="img/latest-blog3.png" class="img-fluid w-100 mb-3" />
+                        <div class="pos-blog d-flex flex-column">
+                            <h3 class="m-0 p-0 text-light">15</h3>
+                            <p class="p-0 m-0 text-light">Jan</p>
+                        </div>
+                    </div>
+                    <div class="blog-item">
+
+                        <h5>Lorem ipsum dolor sit amet</h5>
+                        <p class="text-muted">Consectetur adipiscing elit, sed do eiusmod tempor
+                            incididunt ut labore et dolore magna aliqua.
+                        </p>
+                        <hr class="mt-1">
+                        </hr>
+                        <div class="d-flex">
+                            <i class="fa fa-eye px-1"></i>
+                            <p class="text-muted ">542</p>
+                            <i class="fa fa-comment-dots px-2"></i>
+                            <p class="text-muted">17</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="footer pt-5 pb-1 bg-light" id="contact">
+        <section id="Map" data-nav="section11" class="map">
+            <div class="container-fluid px-0  pb-lg-4 pt-4 "></div>
+            <div class="accordion " id="accordionExample">
+                <div class="card p-0">
+                    <div class="card-header px-1 " id="headingOne" style="background-image: url(img/nature2.jpg);">
+                        <button class="btn    d-flex flex-column justify-content-center align-items-center py-4 w-100"
+                            type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="false"
+                            aria-controls="collapseOne">
+                            <div class="iconContainer   mr-3"><img src="img/location.png" alt=""></div>
+                            <div class="py-2">
+                                <h2 class="mb-1 maintitle" style="color: #f38181;">OPEN MAP</h2>
+                            </div>
+                        </button>
+                    </div>
+                    <div id="collapseOne" class="collapse " aria-labelledby="headingOne"
+                        data-parent="#accordionExample">
+                        <div class="card-body p-0 ">
+                            <iframe class="w-100"
+                                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14686.807392606519!2d72.559828!3d23.034717!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x5959addcb9164cd6!2sIcondice+Creative+Design+Agency!5e0!3m2!1sen!2sin!4v1459764282534"
+                                height="450" style="border:0" allowfullscreen=""></iframe>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            </div>
+        </section>
+        <section id="Contact" data-nav="section12" class="contacts pb-md-5 pt-5 mb-5">
+            <div class="container  pt-5">
+                <div class="row">
+                    <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
+                        <h2 class="mb-4 pb-1 logo">MoGo</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            ut
+                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                            ullamco
+                            laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <p class="followers"><span>15K</span> followers</p>
+                        <div class="contact-icons py-4">
+                            <span>Follow Us: </span>
+                            <i class="fa fa-facebook-f    "></i>
+                            <i class="fa fa-twitter    "></i>
+                            <i class="fa fa-instagram    "></i>
+                            <i class="fa fa-google-plus    "></i>
+                            <i class="fa fa-youtube    "></i>
+                            <i class="fa fa-pinterest-p    "></i>
+                            <i class="fa fa-dribbble    "></i>
+                        </div>
+                        <form class="d-flex">
+                            <input type="email" name="email" placeholder="Your Email..." class="p-2 ">
+                            <button type="submit" class="btn btn-color py-2 rounded-0 ">SUBSCRIBE</button>
+                        </form>
+                    </div>
+                    <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
+                        <h6 class="mb-5 pb-1">BLOGS</h6>
+                        <div class="media flex-column flex-md-row mb-lg-3 ">
+                            <img class="align-self-md-start  mr-3 mb-3" src="img/footer1.jpg"
+                                alt="Generic placeholder image">
+                            <div class="media-body">
+                                <p class="media-contant mb-2">Lorem ipsum dolor sit amet, consectetur adipiscing</p>
+                                <p class="date">Jan 29,2016</p>
+                            </div>
+                        </div>
+                        <div class="media flex-column flex-md-row mb-lg-3 ">
+                            <img class="align-self-md-start  mr-3 mb-3" src="img/footer2.jpg"
+                                alt="Generic placeholder image">
+                            <div class="media-body">
+                                <p class="media-contant mb-2">Lorem ipsum dolor sit amet, consectetur adipiscing</p>
+                                <p class="date">Jan 29,2016</p>
+                            </div>
+                        </div>
+                        <div class="media flex-column flex-md-row mb-lg-3 ">
+                            <img class="align-self-md-start  mr-3  mb-3" src="img/footer3.jpg"
+                                alt="Generic placeholder image">
+                            <div class="media-body">
+                                <p class="media-contant mb-2">Lorem ipsum dolor sit amet, consectetur adipiscing</p>
+                                <p class="date">Jan 29,2016</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <h6 class="mb-5 pb-1">INSTGRAM</h6>
+                        <div class="instaimage mb-2">
+                            <img src="img/inst1.png" alt="">
+                            <img src="img/inst2.png" alt="">
+                            <img src="img/inst3.png" alt="">
+                            <img src="img/inst4.png" alt="">
+                            <img src="img/inst5.png" alt="">
+                            <img src="img/inst6.png" alt="">
+                            <img src="img/inst7.png" alt="">
+                            <img src="img/inst8.png" alt="">
+                            <img src="img/inst9.png" alt="">
+                        </div>
+                        <p class="view-more"><a href="#">View more photos</a></p>
+                    </div>
+
+                </div>
+            </div>
+
+        </section>
+
+        <footer>
+            <div class="row mt-5">
+                <div class="col-12 text-center cpy-right">
+                    <p>© 2016 MoGo free PSD template by <span>Laaqiq</span></p>
+                </div>
+            </div>
+        </footer>
+
+
+
+        <button class="btn p-1 rounded-circle" id="slide-up"><i
+                class="fas fa-arrow-alt-circle-up  fa-3x  "></i></button>
+
+
         <script src="js/jquery-3.5.1.slim.min.js"></script>
         <script src="js/popper.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
